# Lablatory14

./: CMakeLists.txt  main.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/vector/: test.c  test.h  vector.c  vector.h  vectorVoid.c  vectorVoid.h
